After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771256 - OSC 112 (reset cursor color) doesn't work
OSC 112 (reset cursor color) doesn't work
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
0.44.x
Other Linux
: Normal minor
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-11 18:22 UTC by Egmont Koblinger
Modified: 2016-09-11 19:16 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2016-09-11 18:22:29 UTC
Should work according to commit b7c7417 / bug 640040.

  echo -ne '\e]12;pink\a'

=> cursor becomes pink :)

  echo -ne '\e]112\a'

=> cursor remains pink :(
Comment 1 Egmont Koblinger 2016-09-11 18:52:38 UTC
86f206b3ec01033c07a76cf949276058489b53ee is the first bad commit
commit 86f206b3ec01033c07a76cf949276058489b53ee
Author: Christian Persch <chpe@gnome.org>
Date:   Tue Nov 24 23:10:00 2015 +0100

    widget: Allow setting the cursor foreground colour
    
    Based on a patch by James Reed <supplantr@archlinux.info>.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=695011

:040000 040000 b0b3e46f82ca991933c0e8ec0715a0b1bf50528e 4727c48c98681eeafa4aef817004e20c6bfb3ecb M	doc
:040000 040000 780fbe1c9abe63d6ea7f2ed8cac3df9cafebc9b5 a7df0dfd29e9be579fc8b36e9f7d2ffb6d468b92 M	src
Comment 2 Egmont Koblinger 2016-09-11 19:16:50 UTC
Fixed now in commit 791a433.

The BEL terminated version didn't work due to a typo. The ST terminated version didn't work for two reasons: the same typo, as well as a string that was accidentally not updated. Followup in bug 771257.