widget: Fix OSC 112 (reset cursor color)

This was accidentally broken in commit 86f206b3ec01033c07a76cf949276058489b53ee.

https://bugzilla.gnome.org/show_bug.cgi?id=771256